# handson-ml3

./: 02_code_along.ipynb  02_excercises.ipynb  03_code_along.ipynb  03_excercises.ipynb  04_code_along.ipynb  04_excercises.ipynb  05_code_along.ipynb  05_excercises.ipynb  06_code_along.ipynb  06_excercises.ipynb  07_code_along.ipynb  07_excercises.ipynb  08_code_along.ipynb  08_excercises.ipynb  09_code_along.ipynb  09_excercises.ipynb  10_code_along.ipynb  10_exercises.ipynb  11_code_along.ipynb  11_exercises.ipynb  12_code_along.ipynb  12_exercises.ipynb  13_code_along.ipynb  13_exercise_10.ipynb  13_exercise_9.ipynb  14_code_along.ipynb  14_exercises.ipynb  15_code_along.ipynb  15_exercises.ipynb  16_code_along.ipynb  17_exercises.ipynb  18_code_along.ipynb  18_exercises.ipynb  19_code_along.ipynb  pyproject.toml
