[tool.poetry]
name = "handson-ml3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.7"
tensorflow = "~2.14"
tensorflow-macos = { version = "~2.14", markers = "platform_system=='Darwin' and platform_machine=='arm64'" }
tensorflow-metal = "^1.1.0"
ipython = "^8.21.0"
ipykernel = "^6.29.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.1.post1"
graphviz = "^0.20.1"
pydot = "^2.0.0"
tensorflow-hub = "^0.16.1"
tensorflow-datasets = "^4.9.4"
tensorboard-plugin-profile = "^2.15.1"
statsmodels = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
